manifests/poc/trs-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trs-frontend
  namespace: poc
  labels:
    app: trs-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trs-frontend
  template:
    metadata:
      labels:
        app: trs-frontend
    spec:
      serviceAccountName: trs-service-account
      containers:
        - name: trs-frontend
          image: dpcode72/trs-frontend:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 40
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: trs-frontend-service
  namespace: poc
spec:
  selector:
    app: trs-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
