manifests/poc/trs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trs-ingress
  namespace: poc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: trs.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: trs-backend-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trs-frontend-service
                port:
                  number: 80
